2008-09-09  Mikael Ottela   <mikael.ottela@ixonos.com>
	* src/tracker-extract/tracker-extract-mp3.c:
	* src/tracker-extract/tracker-extract-gstreamer.c: The audio
	extractors now check that a minimum amount of information
	(title, artist, album, genre) has been found and if not, 
	"tracker:unknown" value is used for these crucial fields.
	This change can be considered a hack and should be reverted
	when tracker supports finding unexisting metadata.

2008-09-09  Martyn Russell  <martyn@imendio.com>

	* src/libtracker-db/tracker-db-interface.c:
	* src/tracker-indexer/tracker-indexer-db.c: Some small code clean ups.

	* src/tracker-indexer/tracker-indexer.c: Better error handling for
	the move dbus function.

2008-09-09  Martyn Russell  <martyn@imendio.com>

	* src/libtracker-common/tracker-file-utils.c:
	(tracker_file_get_mime_type): Improve the error message.

	* src/tracker-indexer/modules/files.c: Small clean up.
	* src/trackerd/tracker-monitor.c: Fixed the signal emission so the
	file and other file are the right way round for one of the MOVE
	events. This is probably why renaming a file was not working before.

2008-09-08  Mikael Ottela   <mikael.ottela@ixonos.com>

	* src/tracker-extract/tracker-extract-png.c:
	* src/tracker-extract/tracker-extract-jpeg.c:
	* src/tracker-extract/tracker-extract-tiff.c: Changed image
	extractors to take native image information have higher
	priority than EXIF/XMP (for example for width & height)

2008-09-08  Mikael Ottela   <mikael.ottela@ixonos.com>

	* src/tracker-indexer/tracker-indexer-db.c:
	* src/trackerd/tracker-db.c:
	* src/libtracker-common/tracker-type-utils.c:
	* src/libtracker-common/tracker-type-utils.h: Fixed problems with
	date handling in metadata.

2008-09-08  Martyn Russell  <martyn@imendio.com>

	* src/tracker-indexer/tracker-indexer.c: Implemented a cache that
	we use to know if a directory mtime has changed to know if we
	should go into it to be reindexed. We still mtime check each file